default to using mysql client in Docker
Signed-off-by: DanRoscigno <dan@roscigno.com>